--- a/03 - Drilling Riser/report03.Rmd
+++ b/03 - Drilling Riser/report03.Rmd
@@ -7,6 +7,7 @@ output:
     fig_caption: yes
     citation_package: natbib
   word_document: default
+urlcolor: blue
 header-includes:
 - \usepackage{fancyhdr}
 - \usepackage[utf8]{inputenc}
@@ -38,11 +39,12 @@ library(lmtest)
 ```
 
 # 1. Descrição do Problema
-Objetiva-se realizar uma comparação entre quatro tipos de tubos de perfuração _(drilling risers)_, que consiste em uma espécie de conduíte ou tubo utilizado para servir como passagem temporária para o petróleo extraído em plataformas oceânicas. Mais especificamente, pretende-se comparar o tempo médio até a falha _(mean time to failure ou MTTF)_ de quatro configurações diferentes (níveis $A$, $B$, $C$, $D$) de equipamentos, de forma a escolher a que forneça a menor probabilidade de falha, considerando-se um período de $20$ anos. Para isto será comparada a configuração padrão _(Riser1)_ com as outras três, buscando encontrar qual delas proverá o maior _MTTF_, que pode ser sumarizado na seguinte questão:
 
-"Algum dos risers alternativos é melhor que o padrão?"
+Tubos de perfuração _(drilling risers)_ consistem em um tipo de conduíte ou tubo utilizado para transportar o petróleo extraído em plataformas oceânicas para a superfície. Um pesquisador precisa comparar o tempo médio até a falha _(mean time to failure ou MTTF)_ de quatro configurações diferentes (níveis $A$, $B$, $C$, $D$) de equipamentos, de forma a escolher a que forneça a menor probabilidade de falha, considerando-se um período de $20$ anos. Para isto será comparada a configuração padrão _(Riser1)_ com as outras três, buscando encontrar qual delas proverá o maior _MTTF_. Assim, o experimento pode ser sumarizado na seguinte questão:
 
-A plataforma de testes escolhida pela equipe de engenharia consiste na utilização de um modelo em escala para com um protocolo de tempo acelerado, em que há uma relação direta entre o tempo medido de cada observação (em minutos) e a configuração do sistema real. Todavia, o custo de cada observação é significativamente alto, cerca de $US\$10.000$ (dez mil dólares). A fim de minimizar os custos com amostras coletadas, tem-se, como alternativa, utilizar dados históricos existentes para a primeira configuração _(Riser1)_.
+_Algum dos risers alternativos é melhor que o padrão? Se sim, qual deles é o melhor?_
+
+Para realizar o experimento, serão feitos testes utilizando de um modelo de perfuradores em menor escala, sujeitos a um protocolo de testes de tempo de vida acelerado, em que há uma relação direta entre o tempo medido de cada observação (em minutos) e a configuração do sistema real. O custo de cada observação é, em média, $US\$10.000$ (dez mil dólares) por observação. Além dos dados obtidos com os testes, existem dadosdados históricos existentes para a configuração padrão _(Riser1)_.
 
 ```{r,results='show',warning=FALSE,echo=FALSE}
 ## EXPERIMENTAL DEFINITIONS
@@ -56,23 +58,26 @@ v_delta = 0.25
 ```
 Os parâmetros experimentais desejados são:
 
-* Nível de significância: $\alpha = 0.05$;
+* Nível de significância: $\alpha = `r v_alpha`$;
 
-* Tamanho de efeito de interesse prático: ${\delta^{\star}_{t}} = 0.25$;
+* Tamanho de efeito de interesse prático: $\delta^{\star} = `r v_delta`$;
 
-* Potência desejada: $(1- \beta) = \pi  \geq 0.85$.
+* Potência desejada: $(1- \beta) = \pi \geq `r v_power`$.
 
 # 2. Planejamento Experimental
 
-Esta etapa consiste em investigar o comportamento dos níveis de fator a partir de uma análise exploratória, e, posteriormente, aplicar um teste de comparações múltiplas para as médias. A variância do processo é desconhecida e será estimada utilizando-se _[dados históricos de operação](https://git.io/vHDG3)_. A variância será considerada como sendo uniforme para todas as configurações.
+A priemira etapa do experimento é a verificação de diferenças estatísticas significativas entre as configurações testadas. Se diferenças forem verificadas e as premissas forem validadas, a etapa seguinte consiste consiste em investigar e quantificar essas diferenças através de testes de comparações múltiplas para as médias. Deve ser também efetuada uma análise exploratória qualitativa dos dados para complementar os testes. 
 
-Os dados experimentais utilizados foram obtidos através de simulação, por meio de um _[aplicativo web](http://orcslab.cpdee.ufmg.br:3838/riserdata/)_. A data de nascimento do segundo membro mais jovem da equipe (15/10/1992) foi o parâmetro utilizado como semente para o gerador de números da simulação. Os dados gerados informam uma tabela com os níveis de cada fator de interesse em uma coluna e os tempos (tomados em escala logarítmica) em coluna respectiva. Por este motivo não necessitam de tranformações inversas.
+A variância do processo será estimada utilizando-se [dados históricos de operação](https://git.io/vHDG3) disponíveis da configuração padrão. Ela será considerada uniforme para todas as configurações.
+
+Os dados experimentais utilizados foram obtidos através de simulação, por meio de um [aplicativo web](http://orcslab.cpdee.ufmg.br:3838/riserdata/). A data de nascimento do segundo membro mais jovem da equipe (15/10/1992) foi o parâmetro utilizado como semente para o gerador de números da simulação. Os dados gerados informam uma tabela com os níveis de cada fator de interesse em uma coluna e os tempos (tomados em escala logarítmica) em coluna respectiva. Por este motivo não necessitam de tranformações inversas.
+
 
 ## 2.1 Análise de Variância
  
-Para a avaliar o questionamento acima, será utilizada a ferramenta estatística para análise de variância denominada ANOVA.
+Para a avaliar existência de diferenças significativas entre as configurações de perfuradores, será utilizado o teste estatístico ANOVA.
 
-A técnica ANOVA compara médias de diferentes amostras para verificar se estas possuem médias iguais ou não. Assim, essa técnica permite que vários grupos sejam comparados simultâneamente [@Campelo2015-01], [@MontgomeryRunger2011]. Em outras palavras, a análise de variância é utilizada quando se quer decidir se os níveis apresentam médias diferentes em relação é uma média global $\mu$. As diferenças entre as médias dos níveis e a média global é  $\tau_i$ $\forall \  i$. 
+Essa técnica analisa médias e variâncias de observações de diferentes grupos para verificar se existe diferença estatístixa significativa entre as médias desses grupos. Assim, generaliza o teste t para mais de dois grupos, permitindo que sejam comparados simultâneamente [@Campelo2015-01], [@MontgomeryRunger2011]. Em outras palavras, a análise de variância é utilizada quando se quer decidir se os níveis apresentam médias diferentes em relação é uma média global $\mu$. As diferenças entre as médias dos níveis e a média global é  $\tau_i$ $\forall \  i$. 
 
 Vale ressaltar que a técnica é restrita apenas à indicação de existência ou não de diferenças entre os níveis avaliados, sem indicar quais níveis seriam diferentes. Além disso, quando a análise de variância tem como resultado um indicativo de refutação da hipótese nula $\eqref{eq:01}$ é que podem ser evidenciados os indícios de diferenças entre os níveis.
 
@@ -85,44 +90,77 @@ H_{1}:& \exists \ \ \tau_i \neq 0
 \label{eq:01}
 \end{equation}
 
-Esta etapa foi considerada como uma primeira verificação ao questionamento deste estudo por apresentar um custo de coleta de amostras menor do que o teste de comparações múltiplas discutido abaixo. Portanto, caso não seja detectada alguma diferenças entre os níveis o estudo será concluído por meio do teste ANOVA.
+Esta etapa foi considerada como uma primeira verificação ao questionamento deste estudo por apresentar um custo de coleta de amostras menor do que o teste de comparações múltiplas discutido na Seção 2.2. Portanto, caso não seja detectada alguma diferenças entre os níveis, as comparações múltiplas são dispensáveis, o que reduz o custo do experimento.
 
 ## 2.2 Comparações Múltiplas
 
-Caso a análise ANOVA identifique a existência de diferenças entre os níveis, deve-se proceder com testes de comparação múltiplas todos contra um, no intuito de identificar qual ou quais níveis apresentam tal diferença.
+Caso a análise ANOVA identifique a existência de diferenças entre os níveis, deve-se proceder com testes de comparação múltiplas. As comparações devem ser realizadas em relação à configuração padrão, de maneira a verificar se alguma das alternativas propostas é melhor.
+Desta forma, caso a análise de variância indique a existência de diferenças entre os níveis, será aplicado o teste de comparações múltiplas um-contra-todos (one-vs-all) de _Dunnett_, onde os _Risers_ propostos serão confrontados com a configuração padrão _Riser1_ para verificar se alguma proposta traria ganho de _MTTF_ frente à configuração já estabelecida.
 
-Desta forma, somente, caso a análise de variância indique a existência de diferenças entre os níveis, será aplicado o teste de comparações múltiplas um-contra-todos (one-vs-all) de _Dunnett_, onde os _Risers_ propostos serão confrontados com a configuração padrão _Riser1_ para verificar se alguma proposta traria ganho de _MTTF_ frente à configuração já estabelecida.
+Para realizar o teste de comparações múltiplas, deve-se manter o controle sobre os erros do tipo-$I$ em cada comparação de maneira com que ele não se acumule a cada teste sucessivo. Assim, os valores de $\alpha$ são corrigidos para cada teste através do método de correção de Bonferroni $\eqref{eq:02}$:
 
-Para que se proceda com o teste de comparações múltiplas, deve-se manter o controle sobre os erros do tipo-$I$ em cada comparação. É preciso corrigir os valores de $\alpha$ para cada teste. A escolha para este caso é o método de correção de Bonferroni $\eqref{eq:02}$:
 \begin{equation}
 \alpha_{adj} = \frac{\alpha_{família}}{K} \,,
 \label{eq:02}
 \end{equation}
-no qual $K=3$ consiste no número de comparações a serem feitas que no caso do teste um-contra-todos de _Dunnett_ ($eq. \eqref{eq:03}$):
+
+no qual $K=3$ consiste no número de comparações a serem feitas que no caso do teste um-contra-todos de _Dunnett_. O número de comparações nesse caso é dado pela Equação \eqref{eq:03}:
+
 \begin{equation}
 K=a-1  \,;
 \label{eq:03}
 \end{equation}
-sendo que $a=4$ consiste no número de níveis e $\alpha$ (experimental) desejado $\alpha_{família} = 0.05$. Assim, o valor de $\alpha_{adj} = 0.0167$.
+
+na qual $a=4$ indica oo número de níveis. Assim, utiliza-se o nível de significância ajustado $\alpha_{adj} = `r v_alphaAdj`$.
 
 ## 2.3 Definição do Tamanho Amostral
-Para calcular o tamanho amostral serãos utilizadas as mesmas relações para a comparação de duas amostras independentes emparelhadas ("todos contra um"), alterando-se apenas os valores de $\alpha$ para os valores corrigidos $\alpha_{adj}$, considerando-se as múltiplas hipóteses e $a-1$ comparações. O tamanho amostral para o teste unilateral para as configurações que serão comparadas ao _riser1_ é calculado conforme a equação $\eqref{eq:04}$:
+
+O experimento realizado possui duas etapas: ANOVA para verificar diferença entre as médias dos algoritmos, seguida de comparções múltiplas one-vs-all (se necessário). Cada uma dessas etapas requer diferentes tamanhos amostrais.
+
+O cálculo do tamanho amostral para a técnica ANOVA pode ser feito iterativamente até encontrar o número $n$ tal que:
+
 \begin{equation}
-n_i = \left(1 + \frac{1}{K}\right) \left( \frac{\hat{\sigma}}{\delta^{\star}}\right)^{2}(t_{\alpha_{adj}}+t_{\beta})^{2} \,,
-\label{eq:04}
+F_{(1-\alpha)}=F_{\beta;\phi} \,,
+\label{eq:06}
 \end{equation}
-em que $t_{\alpha_{adj}}$ e $t_{\beta}$ são dependentes de $n$.
 
-Para solucionar o problema da dependência de $n$, os termos $t_{\alpha_{adj}}$ e $t_{\beta}$ foram substituídos por $z_{\alpha_{adj}}$ e $z_{\beta}$ e a equação foi testada iterativamente até a convergência (implementação em anexo no arquivo _calcN.R_). Dessa forma, foi encontrado um primeiro valor para o tamanho amostral $n_i = 58$.
+em que ambas distribuições $F$ têm $(a-1)$ graus de liberdade no numerador e $a(n-1)$ no denomiador. O parâmetro de não-centralidade $\phi$ é dado por:
 
-Contudo, para aumentar a potência do procedimento de múltiplas comparações, o tamanho amostral do grupo de controle deve ser calculado conforme a equação $\eqref{eq:05}$ [@Campelo2015-01]:
+\begin{equation}
+\phi= \frac{\left(n\sum_{i=1}^{a}\tau^2_i\right)}{\hat\sigma^2} \,.
+\label{eq:07}
+\end{equation}
+
+O valor de $\tau$ para comparações "todos contra um" pode ser obtido a partir da relação $\eqref{eq:08}$
+
+\begin{equation}
+\tau = \left( -\frac{(a-1)\delta^{\star}}{a}, \frac{\delta^{\star}}{a}, \frac{\delta^{\star}}{a}, \frac{\delta^{\star}}{a} \right) \,.
+\label{eq:08}
+\end{equation}
+
+O resultado desse teste indica um tamanho amostral $n=60$ observações em cada grupo.
+
+Para calcular o tamanho amostral das comparações múltiplas one-vs-all, serão utilizadas as mesmas relações para a comparação de duas amostras independentes emparelhadas, alterando-se apenas os valores de $\alpha$ para os valores corrigidos $\alpha_{adj}$, considerando-se as múltiplas hipóteses e $a-1$ comparações. Em comparações desse tipo, a potência é maximizada utilizando um número maior de observações para o grupo de controle, dado pela Equação \eqref{eq:05} [@Campelo2015-01]:
+
 \begin{equation}
 n_0 = n_i\sqrt{K} \,,
 \label{eq:05}
 \end{equation}
-Lembrando que $K$ é o número de comparações, conforme  atesta a relação $\eqref{eq:03}$, têm-se, portanto $n_i = 101$.
 
-```{r,results='show',warning=FALSE,echo=FALSE}
+onde $K =3 $ é o número de comparações, $n_0$ é o tamanho amostral do grupo controle e $n_i$ o número de observações dos demais grupos. Esse valor é calculado conforme a Equação $\eqref{eq:04}$:
+
+\begin{equation}
+n_i = \left(1 + \frac{1}{K}\right) \left( \frac{\hat{\sigma}}{\delta^{\star}}\right)^{2}(t_{\alpha_{adj}}+t_{\beta})^{2} \,,
+\label{eq:04}
+\end{equation}
+
+em que $t_{\alpha_{adj}}$ e $t_{\beta}$ são dependentes de $n$.
+
+Para solucionar o problema da dependência de $n$, os termos $t_{\alpha_{adj}}$ e $t_{\beta}$ foram substituídos por $z_{\alpha_{adj}}$ e $z_{\beta}$ e a equação foi testada iterativamente até a convergência (implementação em anexo no arquivo _calcN.R_). 
+
+O resultado obtido indica um tamanho amostral $n_0 = 101$ para o grupo controle e $n_i = 58$ para os demais. Considerando as 10 observações históricas já disponíveis para o _Riser1_, tem-se:
+
+```{r, results='hide', warning=FALSE, echo=FALSE}
 ## SAMPLE SIZE CALC
 v_dataHist = readr::read_csv('riser1.csv')
 v_sdHist = sd(v_dataHist$LogTTF)
@@ -158,32 +196,15 @@ v_nAnova = power.anova.test(groups = v_a,
 
 ```
 
-O cálculo do tamanho amostral foi igualmente realizado para a técnica ANOVA: isto pode ser feito a partir de sucessivas iterações em $n$ até que
-\begin{equation}
-F_{(1-\alpha)}=F_{\beta;\phi} \,,
-\label{eq:06}
-\end{equation}
-em que ambas distribuições $F$ têm $(a-1)$ graus de liberdade no numerador e $a(n-1)$ no denomiador. Além disso, o parâmetro de não-centralidade $\phi$ é dado por:
-\begin{equation}
-\phi=(n\sum_{i=1}^{a}\tau^2_i)/\hat\sigma^2 \,.
-\label{eq:07}
-\end{equation}
 
-O valor de $\tau$, no caso de comparações "todos contra um" pode ser obtido a partir da relação $\eqref{eq:08}$
+* Número de observações experimentais necessárias para o ANOVA: $60 \times 3+50=230$
 
-\begin{equation}
-\tau = \left( -\frac{(a-1)\delta^{\star}}{a}, \frac{\delta^{\star}}{a}, \frac{\delta^{\star}}{a}, \frac{\delta^{\star}}{a} \right) \,,
-\label{eq:08}
-\end{equation}
-que produz um valor de tamanho amostral para a análise de variância $n=60$. Desta forma, tem-se a situação:
+* Número de observações experimentais necessárias a comparação todos contra um: $58*3 + 91 =265$
 
-* Número de amostras necessárias para o ANOVA: $60 \times 3+50=230$
+O primeiro caso apresenta um custo experimental de $\$2.300.000$, versus $\$2.650.000$ para o segundo. 
 
-* Número de amostras necessárias a compração todos contra um: $58*3 + 91 =265$
-
-Consequentemente, observa-se que o custo de aplicação a análise de variância será, para este caso, de $\$2.300.000$ e o das comparações $\$2.650.000$. 
-
-Serão necessárias $60$ coletas para a realização do ANOVA e $58$ para as comparações (excetuando-se o grupo controle), o que resultaria em uma sobreamostragem de $2$ unidades por grupo. Entretanto, caso o ANOVA não forneça como resultado a diferença entre as configurações dos _risers_, seriam economizados cerca de $\$350.000$ fazendo o ANOVA antecipadamente. Tais informações sumarizadas na tabela 1.
+Serão necessárias $60$ coletas para a realização do ANOVA e $58$ para as comparações (excetuando-se o grupo controle), o que resultaria em uma sobreamostragem de $2$ unidades por grupo. Entretanto, o segundo experimento só é necessário caso o ANOVA indique diferença entre as configurações dos _Risers_.
+Caso contrário, apenas o primeiro experimento já seria o suficiente, o que acarretaria em uma economiacerca de $\$350.000$ fazendo o ANOVA antecipadamente. Tais informações sumarizadas na Tabela 1.
 
 \begin{table}[]
 \centering
@@ -198,7 +219,7 @@ Diferença & \$350.000   & -\$60,000   \\ \hline
 \caption{Análise de custo das opções.}
 \end{table}
 
-Será seguido o caminho com a análise de variância em virtude da possível economia e do possível menor custo com a amostragem, caso o ANOVA venha a identificar alguma diferença entre as configurações possíveis de _risers_.
+Assim, serão realizados inicialmente apenas experimentos necessários para o teste ANOVA, em virtude da possível economia e do possível menor custo com a amostragem. Caso sejam identificadas diferenças entre as configurações possíveis de _risers_, mais experimentos serão realizados para completar o tamanho amostral necessário.
 
 ## 2.4 Tratamento e Validação dos Dados
 Considerando o experimento realizado, foi criada uma rotina para validação dos dados obtidos e identificação de erros, onde o tempo de _MTTF_ na escala logarítma deve ser maior que $0$. 
@@ -209,6 +230,8 @@ Caso os valores de uma execução não atendam essas condições, ela seria desc
 
 # 3. Análise Estatística
 ## 3.1 Análise de Variância
+
+O teste ANOVA realizado apresenta _F-valor = 0.608_, o que indica que a hipótese nula de que não há diferenças entre os grupos não foi refutada. O boxplot dos resíduos corrobora o resultado encontrado.
 
 ```{r,results='hide',warning=FALSE,echo=FALSE, fig.height=4, fig.width=6}
 v_data = readr::read_csv('1992-10-15_60_60_60_60.csv')
@@ -225,12 +248,13 @@ v_model <- aov(LogTTF~Riser,
 summary.aov(v_model)
 ```
 
-Como pode ser observado, o gráfico anterior não indica visualmente diferença significativa entre os níveis. Corrobora com isto, o _F-valor = 0.608_ do teste ANOVA indicando pela não rejeição da hipótese de que não há diferença entre os grupos.
-
-Este resultado também indica que não há necessidade de testes de comparação múltiplas, que poderiam identificar quais os níveis diferentes do grupo de controle _(Riser1)_.
+Este resultado indica que não há necessidade de testes de comparação múltiplas, que poderiam identificar quais os níveis diferentes do grupo de controle _(Riser1)_.
 
 ## 3.2 Validação das Premissas
+
 ### Normalidade
+
+O _p-valor = 0.299_ encontrado no teste de _Shapiro-Wilk_ não indica rejeição hipótese de normalidade das amostras. A análise visual do qq plot confirma que não há violações de normalidade significativas. Além disso, o test ANOVA é robusto a pequenas variações de normalidade [@Campelo2015-01]. Desta forma considerou-se a premissa de normalidade atendida.
 
 ```{r,results='hide',warning=FALSE,echo=FALSE, fig.height=5}
 #par(mfrow=c(1,2), mai=.8*c(2.5,1,1,1))
@@ -243,9 +267,11 @@ qqPlot(v_model$residuals,
        main = "Teste de normalidade")
 ```
 
-O _p-valor = 0.299_ encontrado no teste de _Shapiro-Wilk_ indica pela rejeição normalidade das amostras. No entanto, o qq plot mostra que as violações de normalidade são relativamente pequenas. A análise ANOVA é robusto a pequenas variações de normalidade [@Campelo2015-01]. Desta forma considerou-se a premissa de normalidade atendida.
-
 ### Homocedasticidade
+
+O teste de igualdade de variância dos resíduos de _Fligner-Killeen_ apresentou um _p-valor = 0.1416_, o que indica falha em rejeitar a hipótese de homocedasticidade das amostras.
+
+Além disso, podemos observar no gráfico que não há indíveios de diferença de variância significativa para entre os resíduos de diferentes grupos. O teste ANOVA também é robusto a pequenas violações na homocedasticidade como indicado por [@Campelo2015-01]. Assim, essa premissa também é atendida.
 
 ```{r,results='hide',warning=FALSE,echo=FALSE, fig.height=3.5}
 fligner.test(LogTTF~Riser, 
@@ -261,17 +287,17 @@ plot(x    = v_model$fitted.values,
 grid(NULL,NULL, lwd=2, col = "#44444422")
 ```
 
-O teste de igualdade de variância dos resíduos de _Fligner-Killeen_ apresentou um _p-valor = 0.1416_ o que também indica pela rejeição da homocedasticidade das amostras.
-
-Contudo, podemos observar no gráfico acima, uma variância relativamente baixa entre os resíduos das amostras. Novamente com base de que a análise ANOVA é robusto a pequenas variações também de homocedasticidade como indicado por  [@Campelo2015-01], considerou-se a premissa atendida.
-
 
 ### Independência
 
 ```{r,results='hide',warning=FALSE,echo=FALSE, fig.height=3.5}
 v_dwTest = durbinWatsonTest(v_model)
 v_dwTestp = v_dwTest$p
+```
 
+O plot dos valores ordenados de diferenças de tempo entre os algoritmos não apresenta nenhum indício de dependência temporal dos valores. O teste de autocorrelação serial Durbin-Wastson apresenta  $p = `r v_dwTestp`$, o que reforça a hipótese de que não há autocorrelação serial entre as amostras.
+
+```{r,results='hide',warning=FALSE,echo=FALSE, fig.height=3.5}
 plot(x    = seq_along(v_model$residuals),
      y    = v_model$residuals,
      type = "l",
@@ -289,15 +315,11 @@ plot(x    = seq_along(v_model$residuals),
 grid(NA,NULL, lwd=2, col = "#44444422")
 ```
 
-O plot dos valores ordenados de diferenças de tempo entre os algoritmos não apresenta nenhum indício de dependência temporal dos valores. O teste de autocorrelação serial Durbin-Wastson apresenta  $p = `r v_dwTestp`$, o que reforça a hipótese de que não há autocorrelação serial entre as amostras.
-
 
 # 4. Discussão e Conclusões
 
-Os testes realizados levam às seguintes conclusões:
+Os testes realizados indicam que não há diferença significativa entre o tempo de vida das diferentes configurações de _Risers_. Todas as premissas do teste ANOVA realizado foram confirmadas, o que reforça o resultado alcançado. Dessa forma, recomenda-se manter a configuração padrão _Riser1_, uma vez que não há vantagem observada nas alternativas consideradas.
 
-Variância entre grupos é explicada pela variância intra grupo. Não há indício de diferença significativa entre eles.
-
-Recomenda-se manter riser 1. Custo do experimento é significativo $(\$2.300.000)$, mas previniu um custo potencialmente maior de trocar o Riser.
+O custo do experimento realizado é significativo $(\$2.300.000)$, mas previniu um custo potencialmente maior de trocar a configuração de _Riser_.
 
 # Referências
