final project - ancova - v1.5

--- a/04 - Final project/bibliography.bib
+++ b/04 - Final project/bibliography.bib
@@ -40,7 +40,7 @@ year={2017}
 }
 @book{montgomery1984design,
   title={Design and analysis of experiments},
-  author={Montgomery, Douglas C and Montgomery, Douglas C},
+  author={Montgomery, D. C.},
   volume={7},
   year={1984},
   publisher={Wiley New York}
