--- a/04 - Final project/report04.Rmd
+++ b/04 - Final project/report04.Rmd
@@ -40,8 +40,6 @@ v_dataHist = readr::read_csv('data.csv')
 
 # 1. Descrição do Problema
 
-
-
 ```{r,results='show',warning=FALSE,echo=FALSE}
 ## EXPERIMENTAL DEFINITIONS
 v_alpha = 0.05
@@ -61,18 +59,13 @@ Os parâmetros experimentais desejados são:
 * Potência desejada: $(1- \beta) = \pi \geq `r v_power`$.
 
 # 2. Planejamento Experimental
+O experimento envolve comparações entre métodos aplicados em diferentes instâncias de problemas de roteamento, configurando o clássico problema do caixeiro viajante. A variabilidade decorrente das características de cada problema de teste é uma forte fonte de variação espúria quando não considerada na análise dos resultados. Para a avaliar existência de diferenças significativas entre os algoritmos, bem como entre possíveis covariantes, será utilizada a análise de covariância.
 
-A primeira etapa do experimento consistiu na geração dos dados experimetais a partir dos dois algoritmos de otimização.
+A primeira etapa do experimento consistiu na geração dos dados experimetais a partir dos dois algoritmos de otimização. Busca-se a verificação de diferenças estatísticas significativas entre as configurações testadas. Uma análise exploratória qualitativa dos dados foi feita para complementar os testes. 
 
-Busca-se a verificação de diferenças estatísticas significativas entre as configurações testadas.
+## 2.1. Análise exploratória
 
-Deve ser também efetuada uma análise exploratória qualitativa dos dados para complementar os testes. 
-
-Os dados experimentais utilizados foram obtidos através de simulação, por meio dos algoritmos <www.blablabla.com>.
-
-Para a avaliar existência de diferenças significativas entre os algoritmos, bem como entre possíveis covariantes, será utilizada a análise de covariância.
-
-## 2.1 Análise de Co-Variância (ANCOVA)
+## 2.1. Análise de Co-Variância (ANCOVA)
 A análise de covariância é uma técnica $-$ assim como a chamada "blocagem" ou pareamento (em testes-t) $-$ bastante útil para a melhora da precisão de um experimento [@montgomery1984design]. Em diversos aspectos é similar à análise de variância (ANOVA), porém permite ter controle sobre a influência do covariante nas variâveis dependentes. A covariável complementa o controle local e, obviamente, necessita estar correlacionada com a variável de resposta para que se possa fazer uso de tal análise. E quando a análise de variância é realizada com uma ou mais covariáveis, é usual chamar a análise de ANCOVA.
 
 Na ANCOVA a variável dependente é contínua (e.g. tempo, velocidade, etc.), enquanto que a variável independente é normalmente categória (e.g. "masculino/feminino", "fumante/não-fumante" etc. ). A análise de variância, por sua vez, poderá converter-se na ANCOVA quando for adicionado um covariante, que consiste em outra variável, que pode ser tanto categórica quanto contínua. 
@@ -110,7 +103,6 @@ em que ambas distribuições $F$ têm $(a-1)$ graus de liberdade no numerador e 
 ### Normalidade
 
 ### Homocedasticidade
-
 
 ### Independência
 
